--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -62,6 +62,7 @@ $border-color               : mix(#fff, $background-color, 20%);
 
 $primary-color              : #8cd2d5;
 $success-color              : #62c462;
+$warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 $info-color                 : #52adc8;
 
