--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,7 @@
  *
 */
 
-@import "/skins/dark"; // skin
+@import "skins/dark"; // skin
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
